--- a/demo/test.html
+++ b/demo/test.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-  		May Node and Express be with you.
+  		May Node and Express be with you. This is a test.
 
   		<form action="/quotes" method="POST">
 		  <input type="text" placeholder="name" name="name">
