--- a/restful-practice/public/index.html
+++ b/restful-practice/public/index.html
@@ -13,6 +13,7 @@
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="/src/public-app/public-app.html">
+    <link rel="import" href="/src/public-app/public-app.html">  
   </head>
   <body>
     <public-app></public-app>
