--- a/restful-practice/public/index.html
+++ b/restful-practice/public/index.html
@@ -4,18 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>public</title>
-    <meta name="description" content="public description">
+    <title>MBR Boards</title>
+    <meta name="description" content="my-app description">
 
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/src/public-app/public-app.html">
-    <link rel="import" href="/src/public-app/public-app.html">  
+    <link rel="import" href="/src/my-app/my-app.html">
+
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Roboto', 'Noto', sans-serif;
+        line-height: 1.5;
+        min-height: 100vh;
+        background-color: #f1f1f1;
+      }
+    </style>
   </head>
   <body>
-    <public-app></public-app>
+    <my-app></my-app>
   </body>
 </html>
