--- a/public/src/my-app/my-app.html
+++ b/public/src/my-app/my-app.html
@@ -2,15 +2,20 @@
 <link rel="import" href="../../../bower_components/app-layout/app-layout.html">
 <link rel="import" href="../../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
 <link rel="import" href="../../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../../bower_components/iron-icons/social-icons.html">
 <link rel="import" href="../../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
+
+<!-- Import my custom elements -->
+<link rel="import" href="../leaderboard-page/leaderboard-page.html">
 
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 
@@ -142,7 +147,7 @@
     </style>
 
     <app-location route="{{route}}"></app-location>
-    <app-route
+    <app-route id="appRoute"
     route="{{route}}"
     pattern="/:page"
     data="{{routeData}}"
@@ -159,15 +164,16 @@
       <app-drawer-layout id="drawerLayout">
         <app-drawer opened id="drawer" slot="drawer">
           <div id="drawerContent">
-            <paper-button class="horizontal start-justified layout"><iron-icon icon="home"></iron-icon>Home</paper-button>
-            <paper-button class="horizontal start-justified layout"><iron-icon icon="list"></iron-icon>Leaderboards</paper-button>
-            <paper-button class="horizontal start-justified layout"><iron-icon icon="search"></iron-icon>Search</paper-button>
-            <paper-button class="horizontal start-justified layout"><iron-icon icon="perm-identity"></iron-icon>Profiles</paper-button>
-            <paper-button class="horizontal start-justified layout"><iron-icon icon="info"></iron-icon>About</paper-button>
+            <paper-button on-tap="changePage" name="home" class="horizontal start-justified layout"><iron-icon icon="home"></iron-icon>Home</paper-button>
+            <paper-button on-tap="changePage" name="leaderboard" class="horizontal start-justified layout"><iron-icon icon="list"></iron-icon>Leaderboard</paper-button>
+            <paper-button on-tap="changePage" name="search" class="horizontal start-justified layout"><iron-icon icon="search"></iron-icon>Search</paper-button>
+            <paper-button on-tap="changePage" name="profiles" class="horizontal start-justified layout"><iron-icon icon="perm-identity"></iron-icon>Profiles</paper-button>
+            <paper-button on-tap="changePage" name="about" class="horizontal start-justified layout"><iron-icon icon="info"></iron-icon>About</paper-button>
           </div>
         </app-drawer>
 
         <iron-pages selected="[[routeData.page]]" attr-for-selected="name">
+        <!-- <iron-pages selected="0"> -->
           <div id="siteContent" name="home">
             <div id="welcomeSection" class="horizontal center-justified layout center fullWidth">
               <div id="welcomeContainer" class="horizontal layout">
@@ -193,9 +199,9 @@
                           <div class="playerCardPic vertical center-justified layout center">
                             <iron-image src=[[item.pic_link]]></iron-image>
                           </div>
-                          <div><b>[[item.name]]</b><br><b>Faction: </b> [[_emptyBind(item.faction)]]<br><b>Rank: </b> [[_calculateRank(item.base_ap)]]</div>
-                          <div style="width: 13%"></div>
-                          <div><b>AP:</b> [[item.base_ap]]<br><b>Record: </b> <span>[[item.record.win]]W</span>/<span>[[item.record.lose]]L</span>/<span>[[item.record.tie]]T</span><br><b>Mesos:</b> [[item.meso]]</div>
+                          <div class="flex"><b>[[item.name]]</b><br><b>Faction: </b> [[_emptyBind(item.faction)]]<br><b>Rank: </b> [[_calculateRank(item.base_ap)]]</div>
+                          <div class="flex"><b>AP:</b> [[item.base_ap]]<br><b>Record: </b> <span>[[item.record.win]]W</span>/<span>[[item.record.lose]]L</span>/<span>[[item.record.tie]]T</span><br><b>Mesos:</b> [[item.meso]]</div>
+                          <paper-icon-button icon="social:person" class="playCardProfile relative self-end" style="top: 10px; left:5px"></paper-icon-button>
                         </div>  
                       </paper-card>
 
@@ -210,6 +216,8 @@
               </div>
             </div>
           </div>
+
+          <leaderboard-page name="leaderboard"></leaderboard-page>
         </iron-pages>
 
       </app-drawer-layout>
@@ -271,6 +279,10 @@
         super();
         //console.log('hi');
         //this.$.iajax.generateRequest();
+      }
+      changePage(e) {
+        var targetPage = e.target.getAttribute('name');
+        this.set('routeData.page', targetPage);
       }
       handleTop3Response(data) {
         this.top3 = data.detail.response;
