--- a/public/src/leaderboard-page/leaderboard-page.html
+++ b/public/src/leaderboard-page/leaderboard-page.html
@@ -23,7 +23,7 @@
         /*background-color: blue;*/
       }
       #main {
-        height: 2000px;
+        height: 1500px;
         /*background-color: red;*/
       }
       #top {
@@ -36,6 +36,7 @@
         font-weight: bold;
       }
       #topLeftTitle {
+        margin: 0px 0px 2px 0px;
         color: #E53935;
         font-size: 35px;
         font-weight: bold;
